modif mapping dans controller